examples/test/testpolicy19885.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19885
  namespace: namespace130
spec:
  podSelector:
    matchLabels:
      key42: value39
      key25: value39
      key46: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value31
      podSelector:
        matchLabels:
          key12: value7
